@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2009-2010 by Walter Brisken                             *
+ *   Copyright (C) 2009-2010 by Walter Brisken / Adam Deller               *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -729,8 +729,8 @@ static void populateBaselineTable(DifxInput *D, const CorrParams *P, const CorrS
 	int nFreq;
 	DifxBaseline *bl;
 	DifxConfig *config;
-	int freqId, blId, configId;
-
+	int freqId, altFreqId, blId, configId;
+	double lowedgefreq, altlowedgefreq;
 
 	// Calculate maximum number of possible baselines based on list of configs
 	D->nBaseline = 0;
@@ -872,6 +872,29 @@ static void populateBaselineTable(DifxInput *D, const CorrParams *P, const CorrS
 
 						n1 = DifxDatastreamGetRecChans(D->datastream+a1, freqId, a1p, a1c);
 						n2 = DifxDatastreamGetRecChans(D->datastream+a2, freqId, a2p, a2c);
+
+						if(n2 == 0)
+						{
+							//look for another freqId which matches band but is opposite sideband
+							lowedgefreq = D->freq[freqId].freq;
+							if(D->freq[freqId].sideband == 'L')
+							{
+								lowedgefreq -= D->freq[freqId].bw;
+							}
+							for(int f2 = 0; f2 < D->datastream[a2].nFreq; f2++)
+							{
+								altFreqId = D->datastream[a2].freqId[f2];
+								altlowedgefreq = D->freq[altFreqId].freq;
+								if(D->freq[altFreqId].sideband == 'L')
+								{
+									altlowedgefreq -= D->freq[altFreqId].bw;
+								}
+								if(altlowedgefreq == lowedgefreq)
+								{
+									n2 = DifxDatastreamGetRecChans(D->datastream+a2, altFreqId, a2p, a2c);
+								}
+							}
+						}
 
 						npol = 0;
 						for(u = 0; u < n1; u++)
